tests/miniJava/neg/006844_mutation.MiniJava
class int [] java { public static void Main ( String [ ] java ) { { } } }
